,한글 주석 문제 해결 완료

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,18 @@
 eclipse.preferences.version=1
+encoding//salinasolution/controllog/admin.py=utf-8
+encoding//salinasolution/controllog/models.py=utf-8
+encoding//salinasolution/controllog/urls.py=utf-8
+encoding//salinasolution/debug.py=utf-8
+encoding//salinasolution/feedback/models.py=utf-8
+encoding//salinasolution/feedback/urls.py=utf-8
+encoding//salinasolution/feedback/views.py=utf-8
+encoding//salinasolution/manage.py=utf-8
 encoding//salinasolution/pson.py=utf-8
+encoding//salinasolution/templetobj.py=utf-8
+encoding//salinasolution/urls.py=utf-8
+encoding//salinasolution/userinfo/admin.py=utf-8
+encoding//salinasolution/userinfo/models.py=utf-8
+encoding//salinasolution/userinfo/urls.py=utf-8
+encoding//salinasolution/userinfo/views.py=utf-8
+encoding//salinasolution/var.py=utf-8
+encoding/<project>=UTF-8
