pson 안드이드 부분과 feedback 부분 테스트 완료

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -2,6 +2,7 @@ eclipse.preferences.version=1
 encoding//salinasolution/controllog/admin.py=utf-8
 encoding//salinasolution/controllog/models.py=utf-8
 encoding//salinasolution/controllog/urls.py=utf-8
+encoding//salinasolution/controllog/views.py=utf-8
 encoding//salinasolution/debug.py=utf-8
 encoding//salinasolution/feedback/models.py=utf-8
 encoding//salinasolution/feedback/urls.py=utf-8
