--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="swmaestro.salina.activity"
+    package="io.salina.android"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -7,28 +7,17 @@
         android:minSdkVersion="8"
         android:targetSdkVersion="15" />
     
+    <!-- 
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
     <uses-permission android:name="android.permission.INTERNET"/>
 
-    <application
-        android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
-        <activity
-            android:name=".MainActivity"
-            android:label="@string/title_activity_main" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        
-        <activity android:name=".TestActivity"/>
+    <application>
         
         <activity android:name="org.salina.android.widget.FeedbackDialogActivity"/>
         
         <service android:name="org.salina.android.widget.FeedbackLabelService"></service>
     </application>
+    
+     -->
 
 </manifest>
