--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,17 +7,6 @@
         android:minSdkVersion="8"
         android:targetSdkVersion="15" />
     
-    <!-- 
-    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
-
-    <application>
-        
-        <activity android:name="org.salina.android.widget.FeedbackDialogActivity"/>
-        
-        <service android:name="org.salina.android.widget.FeedbackLabelService"></service>
-    </application>
-    
-     -->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
 </manifest>
