--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -6,18 +6,25 @@
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="15" />
-    
-    <!-- 
-    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application>
-        
-        <activity android:name="org.salina.android.widget.FeedbackDialogActivity"/>
-        
-        <service android:name="org.salina.android.widget.FeedbackLabelService"></service>
+	    <activity
+	        android:name="org.salina.android.widget.FeedbackDialogActivity"
+	        android:theme="@android:style/Theme.Dialog" />
+	    <activity android:name="io.salina.android.www.ContentsActivity"/>
+	
+	    <service android:name="io.salina.android.widget.FeedbackLabelService" >
+	    </service>
+	
+	    <activity
+	        android:name="io.salina.android.widget.FeedbackActivity"
+	        android:label="@string/app_name"
+	        android:theme="@style/Theme.Sherlock.Light" >
+	    </activity>
     </application>
-    
-     -->
 
 </manifest>
