real_voice  post로 바꾸기 전

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -24,4 +24,5 @@ encoding//salinasolution/userinfo/models.py=utf-8
 encoding//salinasolution/userinfo/urls.py=utf-8
 encoding//salinasolution/userinfo/views.py=utf-8
 encoding//salinasolution/var.py=utf-8
+encoding//template/html/admin_more_info/more_praise_feedbacks.html=UTF-8
 encoding/<project>=UTF-8
